Fix embed and big mobile screen legend and collapse

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -24,7 +24,7 @@ $vessel-info-height: 70px;
 
 $map-panels-width: 320px;
 $leyend-width: 160px;
-$leyend-mobile-width: 30%;
+$leyend-mobile-width: 113px;
 $control-panel-left-offset: 14px;
 
 
