--- a/app/styles/components/miniGlobe.scss
+++ b/app/styles/components/miniGlobe.scss
@@ -46,7 +46,4 @@
       border-radius: 50%;
     }
   }
-
-  @media #{$mq-tablet} {
-  }
 }
